...
  Left,
  Right,
  Button,
  List,
  ListItem,
  Footer,
  SwipeRow
} from 'native-base'
import { connect } from 'react-redux'
import analyticActions from '../../../reducer/analytic/analyticAction'
import audioActions from '../../../reducer/audio/audioAction'
import downloadActions from '../../../reducer/download/downloadAction'
import '../../../lib/global'
...
                  </Text>
                </View>
              </TouchableHighlight>
            </View>
            }
            right={
              <TouchableHighlight testID='SwipeRow.RightItem' onPress={() => this.props.actions.removeDownloadedCpAudio({...capsules[parentKey].audios[childKey], parentKey: parentKey})}>
                <View style={{backgroundColor: 'red', height: '100%', justifyContent: 'center', alignItems: 'center'}}>
                  <Text style={{color: 'white'}}>Delete</Text>
                </View>
              </TouchableHighlight>
            }
            />
...
