...
import MemberInfo from './subscreen/memberInfo'
import FeedBack from './subscreen/feedback'
import Apply from './subscreen/apply'
import Mypoint from './subscreen/myPoint'
import Mycapsule from './subscreen/myCapsule'
import Mytalk from './subscreen/myTalk'
import DownLoad from './subscreen/download'
import PointCenter from './subscreen/pointCenter'
import Icon from '../../components/img/icon/MediumIcon'
import {Tabstyles, TabIconLink} from '../Tabstyles'

export default (
  <Stack
...
